style.css
html {
  background: linear-gradient(180deg, darkturquoise, wheat);
  min-height: 100%;
  font-family: Joan, serif;
}

h1 {
  text-align: left;
  padding-left: 0.4em;
  font-family: Lato, sans-serif;
  font-size: 3em;
  font-weight: 900;
  font-style: italic;
  color: white;
  text-shadow: 3px 3px 2px darkviolet;
  text-transform: uppercase;
  letter-spacing: 30px;
  word-spacing: 40px;
}

h2 {
  text-align: left;
  margin-left: 1em;
  font-family: Lato, sans-serif;
  font-size: 2em;
  font-style: italic;
  color: white;
  text-shadow: 3px 3px 2px darkviolet;
  letter-spacing: 3px;
}

.flex {
  display: flex;
}

img {
  height: 300px;
  margin-top: -2em;
  margin-right: 1em;
  margin-left: 5em;
  border-radius: 10%;
}

p, table {
  margin-left: 2em;
  font-size: 1.3em;
}

a {
  color: darkviolet;
}

.caption {
  text-align: center;
  padding-left: 4.5em;
  font-style: italic;
}

.code {
  font-family: 'Roboto Mono', monospace;
  font-size: 90%;
}

td {
  padding-bottom: 1em;
}

.date {
  font-weight: bold;
  padding-right: 2em;
}

